在admin管理增加kanglevhms图片

--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -35,6 +35,7 @@ function SwitchMenu(obj,sty)
 }
 </script>
 <div id="masterdiv">
+<div align="center"><a href="http://www.kanglesoft.com" target="_blank"><img src='{{$STATIC}}/style/kanglevhms.gif' border="0"/></a></div>
 <h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">{{$lang.account_manage}}</ol></h1>
 	<ul class="submenu" id="sub2" >
 		<li><a href="?c=index&a=main" target='main'>{{$lang.myinfo}}</a></li>	
