--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -66,9 +66,9 @@ function check_register()
         <td class="td_bgc right_2">用户：</td>
         <td class="td_bgc right_2 tb_wid4">
         <table width='100%' border='0' cellpadding="0" cellspacing="0">
-        <tr><td>
+        <tr><td width="45%">
          <input name='username' type='text' id="tb_wid3" value="" size="16" onblur="check_user()"/><span class="color01 right"><font color="red">*</font></span>
-         </td><td><div id='check_result'></div></td></tr></table>
+         </td><td align="left"><div id='check_result'></div></td></tr></table>
          </td>
         </tr>
       <tr>
