--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -16,7 +16,7 @@
           <font color=red>*必填</font></td>
         </tr>
       <tr>
-        <td class="td_bgc right_2">主机：</td>
+        <td class="td_bgc right_2">主机IP：</td>
         <td class="td_bgc right_2"><input name="host" type="text" id='tb_wid3' value="{{$node.host}}">
 		      <font color=red>*必填</font></td>
         </tr>
