--- a/vhost/view/default/top.html
+++ b/vhost/view/default/top.html
@@ -9,5 +9,8 @@
 {{if $dbadmin_url}}
 [<a href='{{$dbadmin_url}}' target='_blank'>数据库管理</a>]
 {{/if}}
+{{if $hasEnv}}
+[<a href='?c=tplenv&a=index'>参数设置</a>]
+{{/if}}
 </div>
 </div>
