--- a/user/view/default/style/login.css
+++ b/user/view/default/style/login.css
@@ -10,7 +10,6 @@ a {text-decoration:none;}
 .loading {color:#999;}
 
 #header {width:100%; background:#464646; height:35px; color:#FFFFFF;}
-
 #login {width:330px; height:auto; margin:0 auto; margin-top:60px;}
 #login #logo {font-size:28px; font-weight:bold; margin:20px 0;}
 #warning {border:1px solid #c00; background:#ffe8e8; margin:0 auto; width:300px; height:30px; line-height:30px; margin-bottom:15px; text-align:left; padding-left:10px; display:none;}
@@ -23,3 +22,6 @@ a {text-decoration:none;}
 #login_main .login_button {margin-top:10px; text-align:right; padding-bottom:10px;}
 #login_main .login_button input {background:url('login_button.jpg') no-repeat left top #fff;width:66px; height:24px; border:0; margin:0; padding:0; color:#fff; cursor:pointer;}
 #login_bottom {font-size:1px; line-height:1px; width:330px; height:23px;background:url('login_form_bottom.jpg') no-repeat left top #f9f9f9;}
+#login_body {
+	PADDING-RIGHT: 0px; PADDING-LEFT: 0px; BACKGROUND: url(../Images/user_all_bg.gif) #226cc5 repeat-x 50% top; PADDING-BOTTOM: 0px; MARGIN: 110px 0px 0px; FONT: 12px/150% Arial, "ËÎÌו" ,Helvetica,sans-serif; PADDING-TOP: 0px; TEXT-DECORATION: none
+}
