--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -28,7 +28,7 @@ function checkPassword()
 {{if $db_limit}}
 <div><br></div>
   <form name='frm' action="?c=session&a=changeDbPassword" method="post">
-<div class="head_block tb_wid2">&nbsp;修改数据库存密码</div>
+<div class="head_block tb_wid2">&nbsp;修改数据库密码</div>
 <div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
