--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -8,7 +8,7 @@
 		<td>[<a href='?c=domain&a=addForm'>新增域名绑定</a>]</td>
 	</tr>
 </table>
-<div class="head_block2 tb_wid2">&nbsp;绑定域名列表员</div>
+<div class="head_block2 tb_wid2">&nbsp;绑定域名列表</div>
 <div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
 	<tr>
