add the product describe.

--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -97,6 +97,10 @@ function changeNode()
 		</select></td>
 	</tr>
 	<tr>
+		<td class="td_bgc right_2">产品说明(支持html):</td>
+		<td class="td_bgc right_2"><textarea name='describe' rows='6' cols='40'>{{$vhostproduct.describe}}</textarea></td>
+	</tr>
+	<tr>
 
 		<td class="td_bgc right_2">状态</td>
 		<td class="td_bgc right_2"><input type="checkbox" name="pause_flag"
