--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -61,6 +61,10 @@ function check_register()
         <td class="td_bgc right_2">{{$product.db_quota}}M</td>
 	  </tr>
 	  <tr>
+        <td class="td_bgc right_2">产品说明</td>
+        <td class="td_bgc right_2">{{$product.describe}}</td>
+	  </tr>
+	  <tr>
         <td class="td_bgc right_2">价格</td>
         <td class="td_bgc right_2">{{$product.price/100}}元/年</td>
         </tr>
