--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -38,6 +38,11 @@
     </tr>
   {{/if}}
   <tr>
+    <tr>
+    <td class="td_bgc right_2">产品说明</td>
+    <td class="td_bgc right_2">{{$product.describe}}</td>
+    </tr>
+  <tr>
     <td class="td_bgc right_2">状态</td>
     <td class="td_bgc right_2">{{$user.status}}</td>
   </tr>
