--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -26,43 +26,43 @@
           </tr>
       <tr>
         <td class="td_bgc right_2">用户名</td>
-        <td class="td_bgc">{{$row.name}}</td>
+        <td class="td_bgc right_2">{{$row.name}}</td>
         </tr>
       <tr>
         <td class="td_bgc right_2">UID：</td>
-        <td class="td_bgc">{{$row.uid}}</td>
+        <td class="td_bgc right_2">{{$row.uid}}</td>
       </tr>
       <tr>
         <td class="td_bgc right_2">所属用户：</td>
-        <td class="td_bgc"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
+        <td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
       </tr>
 	  <tr>
         <td class="td_bgc right_2">产品名称</td>
-        <td class="td_bgc">{{$row.product_name}}</td>
+        <td class="td_bgc right_2">{{$row.product_name}}</td>
 	  </tr>
 	  <tr>
         <td class="td_bgc right_2">模板</td>
-        <td class="td_bgc">{{$row.templete}}:{{$row.sub_templete}}</td>
+        <td class="td_bgc right_2">{{$row.templete}}:{{$row.sub_templete}}</td>
 	  </tr>
 	   <tr>
         <td class="td_bgc right_2">所在服务器</td>
-        <td class="td_bgc">{{$row.node}}</td>
+        <td class="td_bgc right_2">{{$row.node}}</td>
         </tr>
        <tr>
         <td class="td_bgc right_2">路径</td>
-        <td class="td_bgc">{{$row.doc_root}}</td>
+        <td class="td_bgc right_2">{{$row.doc_root}}</td>
         </tr>
 	   <tr>
         <td class="td_bgc right_2">创建时间</td>
-        <td class="td_bgc">{{$row.create_time}}</td>
+        <td class="td_bgc right_2">{{$row.create_time}}</td>
         </tr>
 			  <tr>
         <td class="td_bgc right_2">过期时间</td>
-        <td class="td_bgc">{{$row.expire_time}}</td>
+        <td class="td_bgc right_2">{{$row.expire_time}}</td>
         </tr>
 			  <tr>
         <td class="td_bgc right_2">状态</td>
-        <td class="td_bgc">
+        <td class="td_bgc right_2">
         <form action='?c={{$smarty.request.c}}&a=setStatus&name={{$row.name}}' method='post' name='status_form'>
         <select name='status' onChange="javascript:status_form.submit()">
         {{for $i=0; $i<10; $i++}}
