--- a/user/view/default/frame/top.html
+++ b/user/view/default/frame/top.html
@@ -12,21 +12,20 @@
 <base target="content" />
 </head>
 <body>
-<table width="100%" id="t" cellpadding="0" cellspacing="0">
+<table width="100%" id="t" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td>
-	<table width="100%" cellpadding="0" cellspacing="0">
-      <tr>
-        <td id="t1" width="100%" class="right2"><img src="{{$STATIC}}/images/logo.gif"></td>
-        <td id="t2">
-<script language="javascript" src="?c=product&a=productList&target=parent.main">
-</script>
-</td>
+    <td background="{{$STATIC}}style/top_bg2.jpg" width="289" height="65" valign="top">
+	      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td><a href="index.php"><img src="{{$STATIC}}style/logo.gif" border="0" /></a></td>
         </tr>
-    </table>	</td>
+      </table>	</td>
+    <td background="{{$STATIC}}style/top_bg2.jpg" align="center">
+		<script language="javascript" src="?c=product&a=productList&target=parent.main">
+		</script>
+	</td>
   </tr>
 </table>
-
 </body>
 </html>
 <!--
