--- a/admin/view/default/user/userlist.html
+++ b/admin/view/default/user/userlist.html
@@ -8,10 +8,11 @@
 		 <span class="topimg STYLE1">用户名:</span>
     	<input name="username" type="text" id="username" value="{{$username}}" size="35">
     	<input type="submit" name="Submit" value="搜索">
+    	[<a  href="?c=user&a=pageUsers" target='main'>用户列表</a>]
 		 </p>
+		 </form>
 	</div>
-	</form>
-</div>
+
 {{if $msg}}
 <div align="center">
 <div class="block tb_wid mar_top" align="center"> 
@@ -61,6 +62,8 @@
  </div>
 </div>
 {{/if}}
+
+
 </body>
 </html>
 {{include file='common/foot.html'}}
