--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -8,7 +8,7 @@
   			 <span class="topimg STYLE1">输入ftp用户名或#uid或域名:</span>
    			<input name="user" type="text" id="user" value="{{$user}}" size="25">
    			<input type="submit" name="Submit" value="搜索">
-   			[<a href="?c=vhost&a=pageVhost">空间列表</a>]
+   			<a href="?c=vhost&a=pageVhost">[空间列表]</a>
 			 </p>
  		</div>
    		</form>
