node will hide the password and db_passwd.

--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -32,8 +32,8 @@
         </tr>
 	  <tr>
         <td class="td_bgc right_2">管理密码：</td>
-        <td class="td_bgc right_2"><input name="passwd" type="text" id='tb_wid3' value="{{$node.passwd}}">
-            <font color=red>*必填.默认:kangle</font></td>
+        <td class="td_bgc right_2"><input name="passwd" type="text" id='tb_wid3' value="" autoComplete='off'>
+            <font color=red>默认:kangle，仅新加和修改密码时才写.</font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">数据库管理账号：</td>
@@ -42,8 +42,8 @@
         </tr>
 	  <tr>
         <td class="td_bgc right_2">数据库管理密码：</td>
-        <td class="td_bgc right_2"><input name="db_passwd" type="text" id='tb_wid3' value="{{$node.db_passwd}}">
-           </td>
+        <td class="td_bgc right_2"><input name="db_passwd" type="text" id='tb_wid3' value="" autoComplete='off'>
+          <font color=red>仅新加和修改密码时才写.</font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">物理盘/挂载点：</td>
