--- a/admin/view/default/style/header.css
+++ b/admin/view/default/style/header.css
@@ -1,7 +1,7 @@
 #t{
 height:72px;
 width:100%;
-background:url(/images/top-bg.gif) #008ECE;
+background:#008ECE;
 border-bottom:4px solid #008ECE;
 }
 #t1 {
