--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -2,23 +2,23 @@
 <body text='#000000' leftmargin='0' topmargin='0'>
 <div align="center">
 <div class="head_block tb_wid">&nbsp;我的信息</div>
-	<div class="block tb_wid">
-		<table id="table_2" border="0" cellpadding="0" cellspacing="1">
-		  <tr>
-			<td class="td_bgc right_2">用户名:</td>
-			<td class="td_bgc tb_wid2 right_2">{{$role.admin}}</td>
-		  </tr>
-		  <tr>
-			<td class="td_bgc right_2">最后登录时间:</td>
-			<td class="td_bgc right_2"> {{$smarty.session.admin_last_login}}</td>
-		  </tr>
-		  <tr>
-			<td class="td_bgc right_2">最后登录IP:</td>
-			<td class="td_bgc right_2">{{$smarty.session.admin_last_ip}}</td>
-		  </tr>
-		</table>
+<div class="block tb_wid">
+<table id="table_2" border="0" cellpadding="0" cellspacing="1">
+	  <tr>
+        <td class="td_bgc right_2">用户名:</td>
+        <td class="td_bgc tb_wid2 right_2">{{$role.admin}}</td>
+	  </tr>
+	  <tr>
+        <td class="td_bgc right_2">最后登录时间:</td>
+        <td class="td_bgc right_2"> {{$smarty.session.admin_last_login}}</td>
+      </tr>
+	  <tr>
+        <td class="td_bgc right_2">最后登录IP:</td>
+        <td class="td_bgc right_2">{{$smarty.session.admin_last_ip}}</td>
+	  </tr>
+    </table>
+  </div>
 	  </div>
-</div>
-</div>
+	  </div></div>
 {{include file='common/foot.html'}}
 
