--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -15,12 +15,11 @@
 <table width="100%" id="t" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td background="{{$STATIC}}style/top_bg2.jpg" width="289" height="65" valign="top">
-	     <table width="100%" border="0" cellspacing="0" cellpadding="0">
-			<tr>
-			  <td><a href="index.php"><img src="{{$STATIC}}style/logo.gif" border="0" /></a></td>
-			</tr>
-      	</table>	
-	</td>
+	      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td><a href="index.php"><img src="{{$STATIC}}style/logo.gif" border="0" /></a></td>
+        </tr>
+      </table>	</td>
     <td background="{{$STATIC}}style/top_bg2.jpg" align="center">
 		<font color="#FFFFFF">
 		<SCRIPT language="javascript">
@@ -52,8 +51,7 @@
 		  document.write("</table>");
 		//-->
 		</SCRIPT>
-		</font>	
-	</td>
+		</font>	</td>
   </tr>
 </table>
 </body>
