--- a/admin/view/default/user/userslist.html
+++ b/admin/view/default/user/userslist.html
@@ -32,7 +32,7 @@
 						<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
 						<td class="td_bgc right_2">{{$row.id}}</td>
 						<td class="td_bgc right_2">{{$row.name}}</td>
-						<td class="td_bgc right_2">{{$row.money}}元</td>
+						<td class="td_bgc right_2">{{$row.money/100}}元</td>
 						<td class="td_bgc right_2">{{$row.email}}</td>
 						<td class="td_bgc right_2">{{$row.regtime}}</td>
 						</tr>
