--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -32,8 +32,8 @@
 				我的产品	 
 			</h1>
 			<ul class="submenu" id="sub6" >
-				<li><a href="?c=vhostproduct&a=show" target="{{$target}}">我的虚拟主机</a></li>
-		  </ul>
+				<li><a href="?c=vhostproduct&a=pageVhostByuser" target="{{$target}}">我的虚拟主机</a></li>
+			 </ul>
 		</div>
 		</td>
 	</tr>
