修改登陆错误页面

--- a/style/style2.css
+++ b/style/style2.css
@@ -97,6 +97,14 @@ margin-bottom:60px;
 }
 .STYLE1 {color: #000000}
 
+.font_1 {
+	FONT-SIZE: 14px;
+	color:red;
+}
+.font_2 {
+	FONT-SIZE: 12px;
+}
+
 
 
 
