--- a/admin/view/default/login_error.html
+++ b/admin/view/default/login_error.html
@@ -10,7 +10,7 @@
 	  </tr>
 	  <tr>
 		<td valign="top">
-			<div class="font_1" align=center><strong>登陆错误[<a href="javascript:history.go(-1);">返回</a>]</strong>
+			<div class="font_1" align=center><strong>登陆错误<a href="javascript:history.go(-1);">[返回]</a></strong>
 			</div>
 		</td>
 	  </tr>
