--- a/vhost/view/default/webapp/show.html
+++ b/vhost/view/default/webapp/show.html
@@ -8,12 +8,12 @@
 		<td>[<a href='?c=domain&a=addForm'>在线安装程序</a>]</td>
 	</tr>
 </table>
-<div class="head_block2 tb_wid2">
-<table id="table_2" cellpadding="0" cellspacing="1">
-	<tr>
-		<td class="head_block2 right_2">操作</td>
-		<td class="head_block2 right_2">域名</td>
-		<td class="head_block2 right_2">目录</td>
+<div class="block tb_wid2">
+<table id="table" cellpadding="0" cellspacing="1">
+	<tr id="ttitle">
+		<td class="td_bgc right_2">操作</td>
+		<td class="td_bgc right_2">域名</td>
+		<td class="td_bgc right_2">目录</td>
 	</tr>
 	{{foreach from=$list item=row}}
 	<tr>
