--- a/vhost/view/default/webapp/setup.html
+++ b/vhost/view/default/webapp/setup.html
@@ -1,22 +1,24 @@
-	<table cellpadding="1" cellspacing="1" border="1">
-	<form id="form1" name="form1" method="post" action="">
-	  <tr>
-		<td>请选择你要安装的程序</td>
-		<td><select name="birth_year">
-			<option selected="selected" value="">请选择</option> 
-			<option value="phpwin">phpwin</option>
-			<option value="discuz">discuz</option>
-			</select>
-		</td>
-	  </tr>
-	  <tr>
-		<td>输入您的域名</td>
-		<td class="td_bgc right_2"><input name="" type="text" /></td>
-	  </tr>
-	  <tr>
-		<td>输入您程序的安装目录</td><td class="td_bgc right_2"><input name="" type="text" /></td>
-	  </tr>
-	 </form>
-	</table>
+<table cellpadding="1" cellspacing="1" border="1">
+<form id="form1" name="form1" method="post" action="">
+  <tr>
+	<td>请选择你要安装的程序</td>
+	<td><select name="birth_year">
+		<option selected="selected" value="">请选择</option> 
+		<option value="phpwin">phpwin</option>
+		<option value="discuz">discuz</option>
+		</select>
+	</td>
+  </tr>
+  <tr>
+	<td>输入您的域名</td>
+	<td class="td_bgc right_2"><input name="" type="text" /></td>
+  </tr>
+  <tr>
+	<td>输入您程序的安装目录</td><td class="td_bgc right_2"><input name="" type="text" /></td>
+  </tr>
+  <tr><td colspan="2" align="center"><input type="submit" value="下一步"></td>
+  </tr>
+ </form>
+</table>
 
 
