--- a/vhost/view/default/webapp/setup.html
+++ b/vhost/view/default/webapp/setup.html
@@ -1,16 +1,16 @@
 <table cellpadding="1" cellspacing="1" border="1">
 <form id="form1" name="form1" method="post" action="">
   <tr>
-	<td>请选择你要安装的程序</td>
+	<td>正在安装的程序</td>
 	<td>&nbsp;
 	</td>
   </tr>
   <tr>
-	<td>输入您的域名</td>
+	<td>域名</td>
 	<td class="td_bgc right_2"><input name="" type="text" /></td>
   </tr>
   <tr>
-	<td>输入您程序的安装目录</td><td class="td_bgc right_2"><input name="" type="text" value="/" /></td>
+	<td>程序安装目录</td><td class="td_bgc right_2"><input name="" type="text" value="/" /></td>
   </tr>
   <tr><td colspan="2" align="center"><input type="submit" value="下一步"></td>
   </tr>
