--- a/vhost/view/default/webapp/show.html
+++ b/vhost/view/default/webapp/show.html
@@ -2,18 +2,19 @@
 <div align="center">
 <table class="tb_wid2" align="center">
 	<tr>
-		<td class="topimg mar_top">共计 {{$sum}} 条记录</td>
-	</tr>
-	<tr>
-		<td>[<a href='?c=domain&a=addForm'>在线安装程序</a>]</td>
+		<td>[<a href='?c=webapp&a=browse'>在线安装程序</a>]</td>
 	</tr>
 </table>
+{{if $list}}
 <div class="block tb_wid2">
 <table id="table" cellpadding="0" cellspacing="1">
 	<tr id="ttitle">
 		<td class="td_bgc right_2">操作</td>
+		<td class="td_bgc right_2">程序</td>
 		<td class="td_bgc right_2">域名</td>
 		<td class="td_bgc right_2">目录</td>
+		<td class="td_bgc right_2">物理路径</td>
+		<td class="td_bgc right_2">安装时间</td>
 	</tr>
 	{{foreach from=$list item=row}}
 	<tr>
@@ -25,7 +26,8 @@
 	</tr>
 	{{/foreach}}
 </table>
-<div align="left"></div>
+</div>
+{{/if}}
 </div>
 </body>
 {{include file='common/foot.html'}}
