--- a/vhost/view/default/webapp/step0.html
+++ b/vhost/view/default/webapp/step0.html
@@ -1,29 +1,34 @@
-<table cellpadding="1" cellspacing="1" border="1">
-<form id="form1" name="form1" method="post" action="">
-  <tr>
-	<td>正在安装{{$appname}} V{{$appver}}</td>
-	<td>&nbsp;
-	</td>
-  </tr>
-  <tr>
-	<td>安装域名</td>
-	<td class="td_bgc right_2">
-	<select name='domain'>
-	{{if $free_domain}}
-	<option value='{{$free_domain}}'>{{$free_domain}}</option>
-	{{/if}}
-	{{foreach from=$domain item=row}}
-	<option value='{{$row}}'>{{$row}}</option>
-	{{/foreach}}
-	</select>
-	</td>
-  </tr>
-  <tr>
-	<td>程序安装目录</td><td class="td_bgc right_2"><input name="" type="text" value="/" /></td>
-  </tr>
-  <tr><td colspan="2" align="center"><input type="submit" value="下一步"></td>
-  </tr>
- </form>
-</table>
+<div><br /></div>
+<div align="center">
+<div class="block tb_wid2">
+	<table id="table_2" cellpadding="0" cellspacing="1">
+		<form id="form1" name="form1" method="post" action="">
+		<tr>
+			<td class="td_bgc right_2">正在安装{{$appname}} V{{$appver}}</td>
+			<td class="td_bgc right_2">&nbsp;</td>
+		</tr>
+		<tr>
+			<td class="td_bgc right_2">安装域名</td>
+			<td class="td_bgc right_2">
+			<select name='domain'>
+			{{if $free_domain}}
+			<option value='{{$free_domain}}'>{{$free_domain}}</option>
+			{{/if}}
+			{{foreach from=$domain item=row}}
+			<option value='{{$row}}'>{{$row}}</option>
+			{{/foreach}}
+			</select>
+			</td>
+		</tr>
+		<tr>
+			<td class="td_bgc right_2">程序安装目录</td><td class="td_bgc right_2"><input name="" type="text" value="/" /></td>
+		</tr>
+		<tr>
+			<td class="td_bgc right_2 td_hg" colspan="2" align="center"><input type="submit" value="下一步"></td>
+		</tr>
+		</form>
+	</table>
+</div>
+</div>
 
 
