--- a/vhost/view/default/webapp/show.html
+++ b/vhost/view/default/webapp/show.html
@@ -1,33 +1,31 @@
 ﻿<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div align="center">
-<table class="tb_wid2" align="center">
-	<tr>
-		<td>[<a href='?c=webapp&a=browse'>在线安装程序</a>]</td>
-	</tr>
-</table>
-{{if $list}}
+	<table class="tb_wid2" align="center">
+		<tr>
+			<td class="topimg mar_top">共计 {{$sum}} 条记录</td>
+		</tr>
+		<tr>
+			<td>[<a href='?c=webapp&a=browse'>在线安装程序</a>]</td>
+		</tr>
+	</table>
 <div class="block tb_wid2">
-<table id="table" cellpadding="0" cellspacing="1">
-	<tr id="ttitle">
-		<td class="td_bgc right_2">操作</td>
-		<td class="td_bgc right_2">程序</td>
-		<td class="td_bgc right_2">域名</td>
-		<td class="td_bgc right_2">目录</td>
-		<td class="td_bgc right_2">物理路径</td>
-		<td class="td_bgc right_2">安装时间</td>
-	</tr>
-	{{foreach from=$list item=row}}
-	<tr>
-		<td class="td_bgc right_2">[<a
-			href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}"
-			title="删除域名">删除</a>]</td>
-		<td class="td_bgc right_2">{{$row.name}}</td>
-		<td class="td_bgc right_2">{{$row.value}}</td>
-	</tr>
-	{{/foreach}}
-</table>
+	<table id="table" cellpadding="0" cellspacing="1">
+		<tr id="ttitle">
+			<td class="td_bgc right_2">操作</td>
+			<td class="td_bgc right_2">域名</td>
+			<td class="td_bgc right_2">目录</td>
+		</tr>
+		{{foreach from=$list item=row}}
+		<tr>
+			<td class="td_bgc right_2">[<a
+				href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}"
+				title="删除域名">删除</a>]</td>
+			<td class="td_bgc right_2">{{$row.name}}</td>
+			<td class="td_bgc right_2">{{$row.value}}</td>
+		</tr>
+		{{/foreach}}
+	</table>
 </div>
-{{/if}}
 </div>
 </body>
 {{include file='common/foot.html'}}
