--- a/vhost/view/default/webapp/step0.html
+++ b/vhost/view/default/webapp/step0.html
@@ -1,16 +1,18 @@
+{{include file='common/head.html'}}
+<body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <div><br /></div>
 <div align="center">
 <div class="block tb_wid2">
 	<table id="table_2" cellpadding="0" cellspacing="1">
 		<form id="form1" name="form1" method="post" action="">
 		<tr>
-			<td class="td_bgc right_2">正在安装{{$appname}} V{{$appver}}</td>
-			<td class="td_bgc right_2">&nbsp;</td>
+			<td class="td_bgc right_2" colspan="2" align="center">正在安装{{$appname}} V{{$appver}}</td>
 		</tr>
 		<tr>
 			<td class="td_bgc right_2">安装域名</td>
 			<td class="td_bgc right_2">
 			<select name='domain'>
+			<option selected="selected" value="">请选择</option>
 			{{if $free_domain}}
 			<option value='{{$free_domain}}'>{{$free_domain}}</option>
 			{{/if}}
@@ -30,5 +32,7 @@
 	</table>
 </div>
 </div>
+</body>
+{{include file='common/foot.html'}}
 
 
