--- a/vhost/view/default/webapp/step0.html
+++ b/vhost/view/default/webapp/step0.html
@@ -12,7 +12,7 @@
 			<td class="td_bgc right_2">安装域名</td>
 			<td class="td_bgc right_2">
 			<select name='domain'>
-			<option selected="selected" value="">请选择</option>
+			<option value="">请选择</option>
 			{{if $free_domain}}
 			<option value='{{$free_domain}}'>{{$free_domain}}</option>
 			{{/if}}
