--- a/vhost/view/default/webapp/step0.html
+++ b/vhost/view/default/webapp/step0.html
@@ -5,14 +5,13 @@
 <div class="block tb_wid2">
 	<table id="table_2" cellpadding="0" cellspacing="1">
 		<form id="form1" name="form1" method="post" action="">
-		<tr>
+		<tr id="ttitle">
 			<td class="td_bgc right_2" colspan="2" align="center">正在安装{{$appname}} V{{$appver}}</td>
 		</tr>
 		<tr>
 			<td class="td_bgc right_2">安装域名</td>
 			<td class="td_bgc right_2">
 			<select name='domain'>
-			<option value="">请选择</option>
 			{{if $free_domain}}
 			<option value='{{$free_domain}}'>{{$free_domain}}</option>
 			{{/if}}
