--- a/vhost/view/default/webapp/show.html
+++ b/vhost/view/default/webapp/show.html
@@ -9,22 +9,29 @@
 		</tr>
 	</table>
 <div class="block tb_wid2">
-	<table id="table" cellpadding="0" cellspacing="1">
-		<tr id="ttitle">
-			<td class="td_bgc right_2">操作</td>
-			<td class="td_bgc right_2">域名</td>
-			<td class="td_bgc right_2">目录</td>
-		</tr>
-		{{foreach from=$list item=row}}
-		<tr>
-			<td class="td_bgc right_2">[<a
-				href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}"
-				title="删除域名">删除</a>]</td>
-			<td class="td_bgc right_2">{{$row.name}}</td>
-			<td class="td_bgc right_2">{{$row.value}}</td>
-		</tr>
-		{{/foreach}}
-	</table>
+
+<table id="table" cellpadding="0" cellspacing="1">
+	<tr id="ttitle">
+		<td class="td_bgc right_2">操作</td>
+		<td class="td_bgc right_2">程序</td>
+		<td class="td_bgc right_2">域名</td>
+		<td class="td_bgc right_2">目录</td>
+		<td class="td_bgc right_2">物理路径</td>
+		<td class="td_bgc right_2">安装时间</td>
+	</tr>
+	{{foreach from=$list item=row}}
+	<tr>
+		<td class="td_bgc right_2">[<a
+			href="javascript:if(confirm('确定删除{{$row.appname}} V{{$row.appver}}?')){location='?c=webapp&a=uninstall&id={{$row.id}}';}"
+			>删除</a>]</td>
+		<td class="td_bgc right_2">{{$row.appname}} V{{$row.appver}}</td>
+		<td class="td_bgc right_2">{{$row.domain}}</td>
+		<td class="td_bgc right_2">{{$row.dir}}</td>
+		<td class="td_bgc right_2">{{$row.phy_dir}}</td>
+		<td class="td_bgc right_2">{{$row.install_time}}</td>
+	</tr>
+	{{/foreach}}
+</table>
 </div>
 </div>
 </body>
