--- a/vhost/view/default/webapp/step0.html
+++ b/vhost/view/default/webapp/step0.html
@@ -4,7 +4,7 @@
 <div align="center">
 <div class="block tb_wid2">
 	<table id="table_2" cellpadding="0" cellspacing="1">
-		<form id="form1" name="form1" method="post" action="">
+		<form id="form1" name="form1" method="post" action="?c=webapp&a=install&step=1&appid={{$appid}}&appname={{$appname}}&appver={{$appver}}">
 		<tr>
 			<td class="td_bgc right_2" colspan="2" align="center">正在安装{{$appname}} V{{$appver}}</td>
 		</tr>
@@ -12,10 +12,6 @@
 			<td class="td_bgc right_2">安装域名</td>
 			<td class="td_bgc right_2">
 			<select name='domain'>
-			<option value="">请选择</option>
-			{{if $free_domain}}
-			<option value='{{$free_domain}}'>{{$free_domain}}</option>
-			{{/if}}
 			{{foreach from=$domain item=row}}
 			<option value='{{$row}}'>{{$row}}</option>
 			{{/foreach}}
@@ -23,7 +19,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="td_bgc right_2">程序安装目录</td><td class="td_bgc right_2"><input name="" type="text" value="/" /></td>
+			<td class="td_bgc right_2">安装目录</td><td class="td_bgc right_2"><input name="dir" type="text" value="/" /></td>
 		</tr>
 		<tr>
 			<td class="td_bgc right_2 td_hg" colspan="2" align="center"><input type="submit" value="下一步"></td>
