--- a/vhost/view/default/webapp/step0.html
+++ b/vhost/view/default/webapp/step0.html
@@ -19,7 +19,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="td_bgc right_2">安装目录</td><td class="td_bgc right_2"><input name="dir" type="text" value="/" /></td>
+			<td class="td_bgc right_2">安装目录</td><td class="td_bgc right_2"><input name="dir" type="text" value="{{$dir}}" /></td>
 		</tr>
 		<tr>
 			<td class="td_bgc right_2 td_hg" colspan="2" align="center"><input type="submit" value="下一步"></td>
