--- a/vhost/view/default/webapp/show.html
+++ b/vhost/view/default/webapp/show.html
@@ -13,17 +13,21 @@
 <table id="table" cellpadding="0" cellspacing="1">
 	<tr id="ttitle">
 		<td class="td_bgc right_2">操作</td>
+		<td class="td_bgc right_2">状态</td>
 		<td class="td_bgc right_2">程序</td>
 		<td class="td_bgc right_2">域名</td>
 		<td class="td_bgc right_2">目录</td>
 		<td class="td_bgc right_2">物理路径</td>
 		<td class="td_bgc right_2">安装时间</td>
+		
 	</tr>
 	{{foreach from=$list item=row}}
 	<tr>
 		<td class="td_bgc right_2">[<a
 			href="javascript:if(confirm('确定删除{{$row.appname}} V{{$row.appver}}?')){location='?c=webapp&a=uninstall&id={{$row.id}}';}"
 			>删除</a>]</td>
+		<td class="td_bgc right_2">
+		{{if $row.status==0}}<a href='?c=webapp&a=install&step=1&appid={{$row.appid}}&appname={{$row.appname}}&appver={{$row.appver}}&id={{$row.id}}&domain={{$row.domain}}&dir={{$row.dir}}'>未完成，重新安装</a>{{else}}成功{{/if}}</td>
 		<td class="td_bgc right_2">{{$row.appname}} V{{$row.appver}}</td>
 		<td class="td_bgc right_2">{{$row.domain}}</td>
 		<td class="td_bgc right_2">{{$row.dir}}</td>
