--- a/vhost/view/default/webapp/wrongdomain.html
+++ b/vhost/view/default/webapp/wrongdomain.html
@@ -3,9 +3,19 @@
 <div><br /></div>
 <div align="center">
 <div class="block tb_wid2">
-	您的域名{{$domain}}没有正确解析到节点IP:{{$node_ip}}上，可能无法正确安装程序.
-	[<a href='?c=webapp&a=install&step=0&force=1&appid={{$appid}}&dir={{$dir}}&appname={{$appname}}&appver={{$appver}}&domain={{$domain}}'>重新选过域名</a>]
-	[<a href='?c=webapp&a=install&step=1&force=1&appid={{$appid}}&dir={{$dir}}&appname={{$appname}}&appver={{$appver}}&domain={{$domain}}'>点这里继续安装</a>]
+	<table id="table_2" cellpadding="0" cellspacing="1">
+	  <tr id="ttitle">
+		<td class="td_bgc right_2" colspan="2" align="center">您的域名{{$domain}}没有正确解析到节点IP:{{$node_ip}}上，可能无法正确安装程序.</td>
+	  </tr>
+	  <tr>
+   		 <td class="td_bgc right_2" align="center">
+			[<a href='?c=webapp&a=install&step=0&force=1&appid={{$appid}}&dir={{$dir}}&appname={{$appname}}&appver={{$appver}}&domain={{$domain}}'>重新选过域名</a>]
+		</td>
+    	<td class="td_bgc right_2" align="center">
+			[<a href='?c=webapp&a=install&step=1&force=1&appid={{$appid}}&dir={{$dir}}&appname={{$appname}}&appver={{$appver}}&domain={{$domain}}'>点这里继续安装</a>]
+		</td>
+ 	 </tr>
+	</table>
 </div>
 </div>
 </body>
