--- a/vhost/view/default/webapp/downinstall.html
+++ b/vhost/view/default/webapp/downinstall.html
@@ -5,34 +5,66 @@
 <script language='javascript'>
 var xmlhttp2=new Array();
 var checkDownInterval = 0;
+var checkInstallInterval = 0;
+var phy_dir = null;
+var install_url = null;
+var install_id = 0;
+function checkInstallResult()
+{
+	if (xmlhttp2.readyState==4) {
+		try{
+			//alert(xmlhttp2.responseText);
+			if(xmlhttp2.status == 200){
+				var dataArray = xmlhttp2.responseXML.getElementsByTagName('result');
+				code = dataArray[0].getAttribute('code');
+				//alert(code);
+				if(code==201){
+					setTimeout("checkInstall()",2000);
+					//msg = '正在复制数据...请等待';
+				}else if (code==200) {
+					msg='复制数据完成.';
+					if(install_url){
+						msg += '[<a href="'+ install_url +'" target="_blank">点这里继续运行安装程序</a>]';
+					}
+					msg += '[<a href="?c=webapp&a=installComplete&id=';
+					msg += install_id + '">点这里返回</a>]';					
+					$('msg').innerHTML = msg;
+				}else{
+					msg = "复制数据出错,错误号=" + code;
+					$('msg').innerHTML = msg;
+				}
+			
+			}
+		}catch(e){
+			msg='有问题,请联系管理员.';
+			$('msg').innerHTML = msg;
+			alert(xmlhttp2.responseText);
+		}
+	}
+}
 function installResult(node)
 {
-	if (xmlhttp2[node].readyState==4) {
-		var whm = 0;
-		var db = 0;
-		try{
-			if(xmlhttp2[node].status == 200){
-				//alert(xmlhttp2[node].responseText);
-				var dataArray = xmlhttp2[node].responseXML.getElementsByTagName('result');
+	if (xmlhttp2.readyState==4) {
+		try{			
+			if(xmlhttp2.status == 200){
+				//alert(xmlhttp2.responseText);
+				var dataArray = xmlhttp2.responseXML.getElementsByTagName('result');
 				code = dataArray[0].getAttribute('code');
 				if (code==200) {
-					msg='复制数据完成.';
-					var url = dataArray[0].getAttribute('install');
-					var id = dataArray[0].getAttribute('id');
-					if(url!=""){
-						msg += '[<a href="'+ url +'" target="_blank">点这里继续安装程序</a>]';
-						msg += '[<a href="?c=webapp&a=installComplete&id=';
-						msg += id+'">安装完成请再点这里返回</a>]';
-					}
+					//msg='复制数据完成.';
+					install_url = dataArray[0].getAttribute('install');
+					install_id = dataArray[0].getAttribute('id');
+					phy_dir = dataArray[0].getAttribute('phy_dir');
+					setTimeout("checkInstall()",3000);
 				}else{
 					msg=dataArray[0].getAttribute('msg');
 				}
-				xxkf_obj(node).innerHTML = msg;
+				$('msg').innerHTML = msg;
 			}		
 		}catch(e){
 			msg='有问题,请联系管理员.';
-			xxkf_obj(node).innerHTML = msg;
-			alert(xmlhttp2[node].responseText);
+			$('msg').innerHTML = msg;
+			alert(xmlhttp2.responseText);
 		}
 	}
 }
@@ -40,26 +72,24 @@ function ajaxInstall()
 {
 	var url = '?c=webapp&a=ajaxInstall&appid={{$appid}}&appname={{$appname}}&appver={{$appver}}&domain={{$domain}}&dir={{$dir}}&id={{$id}}';
 	var node = 'msg';
-	xmlhttp2[node] = create_xmlhttp();	
-	xmlhttp2[node].open("GET",url,true);
-	xmlhttp2[node].onreadystatechange=function (){
+	xmlhttp2 = create_xmlhttp();	
+	xmlhttp2.open("GET",url,true);
+	xmlhttp2.onreadystatechange=function (){
 		installResult(node);
 	};
-	xmlhttp2[node].send(null);
+	xmlhttp2.send(null);
 }
-function checkResult(node)
+function checkResult()
 {
-	if (xmlhttp2[node].readyState==4) {
-		var whm = 0;
-		var db = 0;
+	if (xmlhttp2.readyState==4) {
 		try{
-			if(xmlhttp2[node].status == 200){		
-				var dataArray = xmlhttp2[node].responseXML.getElementsByTagName('result');
+			if(xmlhttp2.status == 200){		
+				var dataArray = xmlhttp2.responseXML.getElementsByTagName('result');
 				code = dataArray[0].getAttribute('code');
 				if(code==200){
 					clearInterval(checkDownInterval);
 					msg='下载完成,正在复制数据...';
-					xxkf_obj(node).innerHTML = msg;
+					$('msg').innerHTML = msg;
 					ajaxInstall();
 				}else if(code==201){
 					var total = dataArray[0].getAttribute('total');
@@ -70,21 +100,31 @@ function checkResult(node)
 					msg='下载出错';
 				}
 			}
-			xxkf_obj(node).innerHTML = msg;
+			$('msg').innerHTML = msg;
 		}catch(e){}
 	}
+}
+function checkInstall()
+{
+	var url = '?c=webapp&a=ajaxCheckAppinstall&op=install&appid={{$appid}}&phy_dir=' + phy_dir + '&id=' + install_id;
+	var node = 'msg';
+	xmlhttp2 = create_xmlhttp();	
+	xmlhttp2.open("GET",url,true);
+	xmlhttp2.onreadystatechange=function (){
+		checkInstallResult();
+	};
+	xmlhttp2.send(null);
 }
 function checkDownload()
 {
 	var url = '?c=webapp&a=ajaxCheckDownload&appid={{$appid}}';
 	var node = 'msg';
-	//xxkf_obj(node).innerHTML="<img src='{{$PSTATIC}}/style/busy.gif'/>正在下载中...";
-	xmlhttp2[node] = create_xmlhttp();	
-	xmlhttp2[node].open("GET",url,true);
-	xmlhttp2[node].onreadystatechange=function (){
-		checkResult(node);
+	xmlhttp2 = create_xmlhttp();	
+	xmlhttp2.open("GET",url,true);
+	xmlhttp2.onreadystatechange=function (){
+		checkResult();
 	};
-	xmlhttp2[node].send(null);
+	xmlhttp2.send(null);
 }
 checkDownInterval = setInterval("checkDownload()",2000);
 </script>
