--- a/vhost/view/default/webapp/downinstall.html
+++ b/vhost/view/default/webapp/downinstall.html
@@ -129,7 +129,7 @@ function checkDownload()
 checkDownInterval = setInterval("checkDownload()",2000);
 </script>
 <div align="center">
-<div class="block tb_wid2">
+<div class="block tb_wid2 td_hg">
 <div id='msg'>
 正在下载中...
 </div>
@@ -137,3 +137,8 @@ checkDownInterval = setInterval("checkDownload()",2000);
 </div>
 </body>
 {{include file='common/foot.html'}}
+
+
+
+
+
