--- a/vhost/view/default/webapp/downinstall.html
+++ b/vhost/view/default/webapp/downinstall.html
@@ -130,7 +130,7 @@ checkDownInterval = setInterval("checkDownload()",2000);
 </script>
 <div align="center">
 <div><br></div>
-<div class="block tb_wid2 td_hg">
+<div class="block tb_wid2 mar_top">
 <div id='msg'>
 正在下载中...
 </div>
