--- a/vhost/view/default/webapp/uninstall.html
+++ b/vhost/view/default/webapp/uninstall.html
@@ -55,7 +55,7 @@ function checkUninstall()
 checkUninstall();
 </script>
 <div align="center">
-<div class="block tb_wid2">
+<div class="block tb_wid2 mar_top">
 <div id='msg'>
 正在删除数据...
 </div>
