--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -60,14 +60,13 @@ function changeNode(id,templete)
           <td class='color01 right' bgcolor='#efefef'>操作</td>
 	   <td class='color01 right' bgcolor='#efefef'>{{$lang.product_id}}</td>
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
+        <td class='color01 right' bgcolor='#efefef'>主机</td>
 		<td class='color01 right' bgcolor='#efefef'>空间配额(M)</td>
 		<td class='color01 right' bgcolor='#efefef'>数据库配额(M)</td>
 		<td class='color01 right' bgcolor='#efefef'>价格(元/年)</td>	
 		<td class='color01 right' bgcolor='#efefef'>绑定子目录</td>	
-		<td class='color01 right' bgcolor='#efefef'>模板</td>
-		<td class='color01 right' bgcolor='#efefef'>主机</td>
-		<td class='color01 right' bgcolor='#efefef'>状态</td>
-    
+		<td class='color01 right' bgcolor='#efefef'>模板</td>		
+		<td class='color01 right' bgcolor='#efefef'>状态</td>    
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
@@ -76,12 +75,7 @@ function changeNode(id,templete)
         [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]
         <td class="right">{{$row.id}}</td>
 		<td class="right">{{$row.name}}</td>
-		<td class="right">{{$row.web_quota}}</td>
-		<td class="right">{{$row.db_quota}}</td>
-		<td class="right">{{$row.price/100}}</td>
-		<td class="right">{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}</td>
-		<td class="right">{{$row.templete}}</td>
-		<td class="right">
+				<td class="right">
 			<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')"">
 		{{foreach from=$nodes item=node}}
 		<option value='{{$node}}' {{if $row.node==$node}}selected{{/if}}>
@@ -91,7 +85,16 @@ function changeNode(id,templete)
 		</select>
 		<div id='busy{{$row.id}}'></div>
 		</td>
-		<td class="right">{{if $row.pause_flag!=0}}暂停销售{{/if}}</td>
+		<td class="right">{{$row.web_quota}}</td>
+		<td class="right">{{$row.db_quota}}</td>
+		<td class="right">{{$row.price/100}}</td>
+		<td class="right">{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}</td>
+		<td class="right">{{$row.templete}}</td>
+
+		<td class="right">
+		{{if $row.pause_flag!=0}}暂停销售 {{/if}}
+		{{if $row.month_flag!=0}}月付 {{/if}}
+		</td>
         </td>
       </tr>
 	  {{/foreach}}
