--- a/user/view/default/vhostproduct/list.html
+++ b/user/view/default/vhostproduct/list.html
@@ -1,23 +1,23 @@
-ï»¿<div id="container">
+<div id="container">
 <div class="padd">
-<div class="topimg">å…±è®¡ {{$sum}} æ¡è®°å½•</div>
+<div class="topimg">¹²¼Æ {{$sum}} Ìõ¼ÇÂ¼</div>
 </div>
   <div id="main" class="wid">
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
-        <td  bgcolor='#efefef' class='color01 right'>æ“ä½œ</td>
-	   <td  bgcolor='#efefef' class='color01 right'>ç”¨æˆ·å</td>
-	   <td bgcolor='#efefef' class='color01 right'>äº§å“</td>
-	   <td bgcolor='#efefef' class='color01 right'>æœåŠ¡å™¨</td>
-	   	<td bgcolor='#efefef' class='color01 right'>è´­ä¹°æ—¶é—´</td>
-		<td  bgcolor='#efefef' class='color01 right'>è¿‡æœŸæ—¶é—´</td>
-		<td bgcolor='#efefef' class='color01 right'>çŠ¶æ€</td>
+        <td  bgcolor='#efefef' class='color01 right'>²Ù×÷</td>
+	   <td  bgcolor='#efefef' class='color01 right'>ÓÃ»§Ãû</td>
+	   <td bgcolor='#efefef' class='color01 right'>²úÆ·</td>
+	   <td bgcolor='#efefef' class='color01 right'>·þÎñÆ÷</td>
+	   	<td bgcolor='#efefef' class='color01 right'>¹ºÂòÊ±¼ä</td>
+		<td  bgcolor='#efefef' class='color01 right'>¹ýÆÚÊ±¼ä</td>
+		<td bgcolor='#efefef' class='color01 right'>×´Ì¬</td>
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
         <td class="right"> 
-        [<a href="?c=vhostproduct&a=renewForm&name={{$row.name}}" >ç»­è´¹</a>]
-        [<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >æŽ§åˆ¶é¢æ¿</a>]</td>
+        [<a href="?c=vhostproduct&a=renewForm&name={{$row.name}}" >Ðø·Ñ</a>]
+        [<a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >¿ØÖÆÃæ°å</a>]</td>
         <td class="right"><a href="?c=vhostproduct&a=impLogin&name={{$row.name}}" >{{$row.name}}</a></td>
 		<td class="right">{{$row.product_name}}</td>
 		<td class="right">{{$row.node}}</td>
