--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -60,7 +60,7 @@ function SwitchMenu(obj,sty)
 	</ul>
 
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">
-	  虚拟主机产品
+	  虚拟主机
 	</ol>
 	</h1>
 	<ul class="submenu" id="sub6" >
@@ -68,6 +68,12 @@ function SwitchMenu(obj,sty)
 		<li><a href="?c=vhost&a=pageVhost" target='main'>虚拟主机列表</a></li>	
 		<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 		<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
+	</ul>
+	<h1 id="m6" onClick="SwitchMenu('sub7','m7')" class="menu">
+	<ol id="p7">系统设置</ol>
+	</h1>
+	<ul class="submenu" id="sub6" >
+		<li><a href='?c=setting&a=money' target='main'>网上支付</a></li>
 	</ul>
 </div>
 </td></tr>
