--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -47,7 +47,7 @@ function changeNode()
 <form name='nodeform'
 	action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}"
 	method="post">
-<div class="head_block tb_wid">&nbsp;增加产品</div>
+<div class="head_block tb_wid">&nbsp;{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</div>
 <div class="block tb_wid">
 <table id="table_2" cellpadding="0" cellspacing="1">
 	<tr>
@@ -69,6 +69,11 @@ function changeNode()
 		<td class="td_bgc right_2">价格(元/年)</td>
 		<td class="td_bgc right_2"><input name="price" type="text" id='tb_wid3'
 			value="{{$vhostproduct.price/100}}"></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">域名绑定个数(-1表示无限)</td>
+		<td class="td_bgc right_2"><input name="domain" type="text" id='tb_wid3'
+			value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}"></td>
 	</tr>
 	<tr>
 		<td class="td_bgc right_2">绑定子目录</td>
