--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -61,9 +61,10 @@ function changeNode(id,templete)
 	   <td class='color01 right' bgcolor='#efefef'>{{$lang.product_id}}</td>
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
         <td class='color01 right' bgcolor='#efefef'>主机</td>
-		<td class='color01 right' bgcolor='#efefef'>空间配额(M)</td>
-		<td class='color01 right' bgcolor='#efefef'>数据库配额(M)</td>
+		<td class='color01 right' bgcolor='#efefef'>空间(M)</td>
+		<td class='color01 right' bgcolor='#efefef'>数据库(M)</td>
 		<td class='color01 right' bgcolor='#efefef'>价格(元/年)</td>	
+		<td class='color01 right' bgcolor='#efefef'>绑定域名</td>	
 		<td class='color01 right' bgcolor='#efefef'>绑定子目录</td>	
 		<td class='color01 right' bgcolor='#efefef'>模板</td>		
 		<td class='color01 right' bgcolor='#efefef'>状态</td>    
@@ -88,6 +89,7 @@ function changeNode(id,templete)
 		<td class="right">{{$row.web_quota}}</td>
 		<td class="right">{{$row.db_quota}}</td>
 		<td class="right">{{$row.price/100}}</td>
+		<td class="right">{{$row.domain}}</td>
 		<td class="right">{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}</td>
 		<td class="right">{{$row.templete}}</td>
 
