--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -2,6 +2,43 @@
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <script language='javascript' src='{{$PSTATIC}}/style/common.js'></script>
 <script language='javascript'>
+function list_subtemplete_result() { 
+	var recv_msg=false;
+	try{
+	 if (xmlhttp.readyState==4) {
+		if(xmlhttp.status==200){		
+		  var dataArray = xmlhttp.responseXML.getElementsByTagName('subtemplete');
+	      var dataArrayLen = dataArray.length;
+	      var templeteMatched = false;
+		  var i=0;
+		  var insertData = '';
+		  if(dataArrayLen>0){
+		   	insertData = "默认引擎:<select name='subtemplete'>";
+		  	for(i=0;i<dataArrayLen;i++){			 
+			  var templete = dataArray[i].firstChild.data;
+			  insertData += "<option value='" + templete + "' ";
+			  if(templete == '{{$vhostproduct.subtemplete}}'){
+				  insertData += 'selected';
+				  templeteMatched = true;
+			  }
+			  insertData += ">" + templete + "</option>\n";
+			 }
+			 insertData += "</select>";
+		  }
+		  xxkf_obj('subtemplete').innerHTML = insertData;
+		}
+	  }
+	}catch(e){
+		alert(e);
+	}
+}
+function changeTemplete(templete)
+{
+	//alert('templete='+templete);
+	xxkf_obj('subtemplete').innerHTML="<img src='{{$PSTATIC}}/style/busy.gif'/>";
+	var url = '?c={{$smarty.request.c}}&a=ajaxListSubTemplete&node=' + nodeform.node.value + '&templete=' + templete;
+	ajax_open_url(url,list_subtemplete_result);
+}
 function list_templete_result() { 
 	var recv_msg=false;
 	try{
@@ -11,7 +48,7 @@ function list_templete_result() {
 	      var dataArrayLen = dataArray.length;
 	      var templeteMatched = false;
 		  var i=0;
-		  var insertData = "<select name='templete'>";
+		  var insertData = "<select name='templete' onChange='changeTemplete(this.value)'>";
 		  for(i=0;i<dataArrayLen;i++){			 
 			  var templete = dataArray[i].firstChild.data;
 			  insertData += "<option value='" + templete + "' ";
@@ -28,6 +65,7 @@ function list_templete_result() {
 			 alert('Warning: The node have not templete : {{$vhostproduct.templete}}'); 
 		  }
 		  {{/if}}
+	      changeTemplete(nodeform.templete.options[nodeform.templete.selectedIndex].value);
 		}
 	  }
 	}catch(e){
@@ -88,8 +126,12 @@ function changeNode()
 	<tr>
 		<td class="td_bgc right_2">模板</td>
 		<td class="td_bgc right_2">
+		<table><tr><td>
 		<div id='templete'><input name="templete" type="text"
 			value="{{$vhostproduct.templete}}"></div>
+			</td><td>
+		<div id='subtemplete'></div>
+		</td></tr></table>
 		</td>
 	</tr>
 	<tr>
