--- a/user/view/default/money_in/rechargeFrom.html
+++ b/user/view/default/money_in/rechargeFrom.html
@@ -8,8 +8,8 @@
       <tr>
         <td class="td_bgc right_2">支付方式:</td>
         <td class="td_bgc right_2">
-        <input type="radio" name="gw" value="alipay" checked="checked" />支付宝 
-        <input type="radio" name="gw" value="banking" checked="checked" />网银在线
+        <input type="radio" name="gw" value="1" checked="checked" />支付宝 
+        <input type="radio" name="gw" value="2" >网银在线
         </td>
       </tr>
 	  <tr>
