--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -33,6 +33,7 @@
 			</h1>
 			<ul class="submenu" id="sub6" >
 				<li><a href="?c=vhostproduct&a=pageVhostByuser" target="{{$target}}">我的虚拟主机</a></li>
+				<li><a href="?c=money_in&a=addFrom" target="{{$target}}">在线充值</a></li>
 			 </ul>
 		</div>
 		</td>
