errorPage can edit by user.

--- a/vhost/view/default/top.html
+++ b/vhost/view/default/top.html
@@ -3,6 +3,7 @@
 [<a href='?c=index&a=main'>产品信息</a>] 
 [<a href='?c=session&a=changePasswordForm'>修改密码</a>] 
 [<a href='?c=domain&a=show'>域名绑定</a>] 
+[<a href='?c=info&a=showErrorPage'>自定义错误</a>]
 {{if $webftp_url}}
 [<a href='{{$webftp_url}}' target='_blank'>在线文件管理</a>]
 {{/if}}
