--- a/admin/view/default/moneyin/pagelist.html
+++ b/admin/view/default/moneyin/pagelist.html
@@ -33,12 +33,13 @@
 				<tr>
 					<td class="td_bgc right_2">{{$row.id}}</td>
 					<td class="td_bgc right_2">{{$row.username}}</td>
-					<td class="td_bgc right_2">{{$row.money}}</td>
+					<td class="td_bgc right_2">{{$row.money}}元</td>
 					<td class="td_bgc right_2">{{$row.start_time}}</td>
 					<td class="td_bgc right_2">{{$row.end_time}}</td>
 					<td class="td_bgc right_2">{{if $row.status==1}}成功{{else}} <font color=red>失败</font>{{/if}}</td>
 					<td class="td_bgc right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
 					<td class="td_bgc right_2">[<a href='?c=moneyin&a=by_return&id={{$row.id}}'>确认</a>]</td>
+					
 					</tr>
 					{{/foreach}}
 		  </table>
