--- a/user/view/default/money_in/pagelist.html
+++ b/user/view/default/money_in/pagelist.html
@@ -16,25 +16,28 @@
 			{{else}}下一页 尾页
 			{{/if}} 
 			{{$page}}/{{$total_page}}&nbsp;
-			共计{{$count}}记录
+			
 		</div>
 		<div class="block tb_wid2">
 			<table id="table" border="0" cellpadding="0" cellspacing="1">
 				<tr id="ttitle">
-					<td class="td_bgc right_2 tb_wid3" width="130">序号</td>
+					
 					<td class="td_bgc right_2 tb_wid3" width="130">会员账号</td>
 					<td class="td_bgc right_2 tb_wid3" width="130">充值金额</td>
 					<td class="td_bgc right_2 tb_wid3" width="130">充值时间</td>
+					
 					<td class="td_bgc right_2 tb_wid3" width="130">支付方式</td>	
 				</tr>
 					{{foreach from=$list item=row}}
+					{{if $row.status==1}}
 				<tr>
-					<td class="td_bgc right_2">{{$row.id}}</td>
+					
 					<td class="td_bgc right_2">{{$row.username}}</td>
-					<td class="td_bgc right_2">{{$row.money}}</td>
+					<td class="td_bgc right_2">{{$row.money}}元</td>
 					<td class="td_bgc right_2">{{$row.start_time}}</td>
 					<td class="td_bgc right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
 					</tr>
+					{{/if}}
 					{{/foreach}}
 		  </table>
 		</div>
