--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -94,6 +94,11 @@ function changeNode()
 			value="{{$vhostproduct.name}}" size="16"></td>
 	</tr>
 	<tr>
+		<td class="td_bgc right_2">产品组：</td>
+		<td class="td_bgc right_2 tb_wid2"><input name='upid' type='text'
+			value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)</td>
+	</tr>
+	<tr>
 		<td class="td_bgc right_2">空间大小(M)：</td>
 		<td class="td_bgc right_2"><input name="web_quota" type="text"
 			id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
