--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -23,12 +23,11 @@
 			
 			<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
 			<ul class="submenu" id="sub4" >
-				<li><a href="?c=money_in&a=addFrom" target="{{$target}}">在线充值</a></li>	
-				<li><a href="?c=money_in&a=pageByUser" target="{{$target}}" >消费记录</a></li>
-				<li><a href="?c=money_in&a=pageByUser" target="{{$target}}"">充值记录</a></li>
+				<li><a href="?c=money&a=addFrom" target="{{$target}}">在线充值</a></li>	
+				<li><a href="?c=money&a=moneyin" target="{{$target}}"">充值记录</a></li>
+				<li><a href="?c=money&a=moneyout" target="{{$target}}" >消费记录</a></li>
 				</ul>
-		
-			<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
+					<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
 				我的产品	 
 			</h1>
 			<ul class="submenu" id="sub6" >
