--- a/user/view/default/money/moneyin.html
+++ b/user/view/default/money/moneyin.html
@@ -5,14 +5,14 @@
 	<div align="center">
 		<div class="mar_top tb_wid2" align="right">
 			{{if $page>1}}
-			<a href='?c=money_in&a=pageByUser&page=0'>首页</a> 
-			<a href='?c=money_in&a=pageByUser&page={{$page-1}}'>上一页</a> 
+			<a href='?c=money&a=moneyin&page=0'>首页</a> 
+			<a href='?c=money&a=moneyin&page={{$page-1}}'>上一页</a> 
 			{{else}}
 			首页 上一页 
 			{{/if}}
 			{{if $page!=$total_page}} 
-			<a href='?c=money_in&a=pageByUser&page={{$page+1}}'>下一页</a>
-			<a href='?c=money_in&a=pageByUser&page={{$total_page}}'>尾页</a>
+			<a href='?c=money&a=moneyin&page={{$page+1}}'>下一页</a>
+			<a href='?c=money&a=moneyin&page={{$total_page}}'>尾页</a>
 			{{else}}下一页 尾页
 			{{/if}} 
 			{{$page}}/{{$total_page}}&nbsp;
