--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -74,9 +74,12 @@ function SwitchMenu(obj,sty)
 	</h1>
 	<ul class="submenu" id="sub6" >
 		<li><a href='?c=setting&a=money' target='main'>网上支付</a></li>
+	 	</ul>
+	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu">
+	<ol id="p8">财务管理</ol>
+	</h1>
+	<ul class="submenu" id="sub8" >
 		<li><a href='?c=moneyin&a=pageMoneyin' target='main'>支付列表</a></li>
-		
-	</ul>
 </div>
 </td></tr>
 </table>
