--- a/user/view/default/money/rechargeFrom.html
+++ b/user/view/default/money/rechargeFrom.html
@@ -1,5 +1,5 @@
 <div align="center">
-  <form  name='reg' action="?c=money_in&a=add" method='post' target='_blank'>
+  <form  name='reg' action="?c=money&a=add" method='post' target='_blank'>
 <div class="head_block tb_wid">&nbsp;在线充值</div>
 <div class="block tb_wid">
  <table id="table_2" cellpadding="0" cellspacing="1">
@@ -17,7 +17,7 @@
       </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
-		 <input onClick="" type=image value="确认" />
+		 <input  type="submit" value="确认" />
 		</td>
       </tr>
     </table>
