--- a/user/view/default/money/moneyout.html
+++ b/user/view/default/money/moneyout.html
@@ -16,7 +16,7 @@
 			{{else}}下一页 尾页
 			{{/if}} 
 			{{$page}}/{{$total_page}}&nbsp;
-			
+			共计{{$count}}记录
 		</div>
 		<div class="block tb_wid2">
 			<table id="table" border="0" cellpadding="0" cellspacing="1">
