--- a/admin/view/default/moneyin/pagelist.html
+++ b/admin/view/default/moneyin/pagelist.html
@@ -20,25 +20,25 @@
 		<div class="block tb_wid2">
 			<table id="table" border="0" cellpadding="0" cellspacing="1">
 				<tr id="ttitle">
-					<td class="td_bgc right_2 tb_wid3" width="130">序号</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">会员账号</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">充值金额</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">充值开始时间</td>
-					<td class="td_bgc right_2 tb_wid3" width="130">支付成功时间</td>	
-					<td class="td_bgc right_2 tb_wid3" width="130">状态</td>	
-					<td class="td_bgc right_2 tb_wid3" width="130">支付方式</td>	
-					<td class="td_bgc right_2 tb_wid3" width="130">操作</td>	
+					<td >序号</td>
+					<td >会员账号</td>
+					<td >充值金额</td>
+					<td >充值开始时间</td>
+					<td >支付成功时间</td>	
+					<td >状态</td>	
+					<td >支付方式</td>	
+					<td >操作</td>	
 				</tr>
 					{{foreach from=$list item=row}}
 				<tr>
-					<td class="td_bgc right_2">{{$row.id}}</td>
-					<td class="td_bgc right_2">{{$row.username}}</td>
-					<td class="td_bgc right_2">{{$row.money/100}}元</td>
-					<td class="td_bgc right_2">{{$row.start_time}}</td>
-					<td class="td_bgc right_2">{{$row.end_time}}</td>
-					<td class="td_bgc right_2">{{if $row.status==1}}成功{{else}} <font color=red>失败</font>{{/if}}</td>
-					<td class="td_bgc right_2">{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
-					<td class="td_bgc right_2">[<a href='?c=moneyin&a=by_return&id={{$row.id}}'>确认</a>]</td>
+					<td >{{$row.id}}</td>
+					<td >{{$row.username}}</td>
+					<td >{{$row.money/100}}元</td>
+					<td >{{$row.start_time}}</td>
+					<td >{{$row.end_time}}</td>
+					<td >{{if $row.status==1}}成功{{else}} <font color=red>失败</font>{{/if}}</td>
+					<td >{{if $row.gw==1}}支付宝{{else}}网银在线{{/if}}</td>
+					<td >[<a href='?c=moneyin&a=manPayReturn&id={{$row.id}}'>确认</a>]</td>
 					
 					</tr>
 					{{/foreach}}
