--- a/user/view/default/money/add.html
+++ b/user/view/default/money/add.html
@@ -1,9 +1,9 @@
 <div align="center">
-  <form  name='reg' action="?c=money&a=add" method='post' target='_blank'>
+  <form  name='reg' action="?c=money&a=add&gw=1" method='post' target='_blank'>
 <div class="head_block tb_wid">&nbsp;在线充值</div>
 <div class="block tb_wid">
  <table id="table_2" cellpadding="0" cellspacing="1">
-   
+   <!-- 
       <tr>
         <td class="td_bgc right_2">支付方式:</td>
         <td class="td_bgc right_2">
@@ -11,13 +11,16 @@
         <input type="radio" name="gw" value="2" >网银在线
         </td>
       </tr>
+      -->
 	  <tr>
-        <td class="td_bgc right_2">金额:</td>
-        <td class="td_bgc right_2"><input name='money' type='text' id="tb_wid3"  value="0" size="16"/></td>
+        <td class="td_bgc right_2">金额(元):</td>
+        <td class="td_bgc right_2">
+        <input name='money' type='text' id="tb_wid3"  value="" size="4"/>
+       </td>
       </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
-		 <input  type="submit" value="确认" />
+		 <input type="submit" value="确认" />
 		</td>
       </tr>
     </table>
