--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -73,7 +73,7 @@ function SwitchMenu(obj,sty)
 	<ol id="p7">系统设置</ol>
 	</h1>
 	<ul class="submenu" id="sub6" >
-		<li><a href='?c=setting&a=money' target='main'>网上支付</a></li>
+		<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付</a></li>
 	 	</ul>
 	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu">
 	<ol id="p8">财务管理</ol>
